# NoOneLikesCors

./: .gitignore  ENDPOINTS.md  README.md  docker-compose.yml  generate_ep_docu.ps1  logging.conf  pyproject.toml  source.ps1  start.ps1
src/ums/: database.py  generate_documetation.py  logger.py  main.py  models.py  settings.py
ums/: pyvenv.cfg
ums/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
